# SwiftRPG-server

./: .gitignore  Cargo.toml  LICENSE  README.md  env.example
migrations/: item_property_user.sql
migrations/2023-12-16-225051_create_items/: down.sql  up.sql
migrations/2023-12-16-232711_create_users/: up.sql
migrations/2023-12-17-012207_create_tiles/: down.sql  up.sql
migrations/2023-12-17-032711_create_users/: down.sql  up.sql
migrations/2023-12-18-004836_create_npcs_and_skills/: down.sql  up.sql
migrations/2023-12-18-234158_seed_names/: down.sql  up.sql
src/: database.rs  game.rs  main.rs  map.rs  schema.rs  web.rs
src/database/: models.rs  schema.rs
src/database/models/: item.rs  item_property_user.rs  skill.rs  skill_user.rs  user.rs
src/game/process/: mod.rs  players.rs
src/map/: data.rs  fns.rs  resources.rs
src/web/: state.rs
