[package]
name = "swiftrpg-server"
description = "Text-based RPG game server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa-swagger-ui = { version = "4.0.0", features = ["rocket"] }
chrono = "0.4.31"
image = "0.24.7"
noise = { version = "0.8.2", features = ["images"] }
num-traits = "0.2.17"
rand = "0.8.5"
rocket = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.108"
utoipa = "4.1.0"
